# token-optimizer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  EMAIL_BETA.md  LAUNCH.md  LAUNCH_ANNOUNCE.md  LICENSE  PERSONAS.md  README.md  SAVINGS.md  SECURITY.md  ab_calibrate_90_grok.py  ab_full_xai_matrix.py  ab_innovate_90_grok.py  ab_test_grok.py  ab_test_multiturn_grok.py  agent_loop_test.py  benchmark.py  calibrate.py  calibration_state.json  debug_agent.py  onboard.py  pyproject.toml  test_diy_loop.py  test_grok_session.py  test_suite.py  test_ui_api.py
.github/ISSUE_TEMPLATE/: bug_report.md  savings_report.md
.github/workflows/: ci.yml
examples/: debug_retry_loop.py  diy_tool_loop.py  frontier_then_production.py  quickstart_demo.py  stream_chat.py
token_optimizer/: __init__.py  __main__.py  core.py  costing.py  diy.py  grok.py  models.py  onboarding.py  tokenizers.py
ui/: __init__.py  __main__.py  api.py  server.py
ui/static/: index.html
